# gazebo_bachelor

./: README.md
apps/: CMakeLists.txt  CamLidarHandler.cc  CamLidarHandler.hh  ObstacleFollower.cc  ObstacleFollower.hh  ObstacleFollowerMain.cc  SendVelocityMessage.cc
generate_tracks/: acceleration.py  generate_track.py  skidpad.py  template.world
models/bachelor_robot/: model.config  model.sdf
models/blue_cone/: model.config  model.sdf
models/custom_camera/: model.config  model.sdf
models/large_orange_cone/: model.sdf
models/lidar/: model.config  model.sdf
models/orange_cone/: model.config  model.sdf
models/yellow_cone/: model.config  model.sdf
plugins/: CMakeLists.txt  ExtrinsicCalibrationPlugin.cc  ExtrinsicCalibrationPlugin.hh  K.xml  ProjectionMatrixPlugin.cc  ProjectionMatrixPlugin.hh  extrinsics.xml
worlds/: acceleration.world  skidpad.world
